# aranym

./: .appveyor.yml  .cvsignore  .gitignore  .project  .travis.yml  AUTHORS  BUGS  ChangeLog  FAQ  INSTALL  Makefile.am  Makefile.in  NEWS  README  README-cygwin.in  README.md  TODO  acinclude.m4  aranym.desktop  aranym.rdef  aranym.spec  autogen.sh  config.guess  configure.ac  template.cpp  version_date.sh
src/: Makefile.am  acia.cpp  acsifdc.cpp  adler32.c  aradata.cpp  aranym_exception.cpp  aranymrc.cpp  araobjs.cpp  ata-new.cpp  ata.cpp  audio.cpp  audio_conv.cpp  audio_crossbar.cpp  audio_dma.cpp  blitter.cpp  bootos.cpp  bootos_elf.h  bootos_emutos.cpp  bootos_linux.cpp  bootos_netbsd.cpp  bootos_tos.cpp  cdrom.cpp  cdromtest.cpp  cfgopts.c  cfgopts.cpp  colorpalette.cpp  dialog.cpp  dirty_rects.cpp  disasm-builtin.cpp  disasm-glue.cpp  disasm-main.cpp  disasm-x86.cpp  dsp.cpp  dsp_core.c  dsp_cpu.c  dsp_cpu.cpp  dsp_disasm.c  dsp_disasm.cpp  dyngl.c  dyngl_gl.c  (+58 more)
src/MacOSX/: Info.plist  InfoMMU.plist  README.rtf  README.txt  SDLMain.m  aranym.icns  diskimage.pl  main_OSX.cpp  parameters_MACOSX.cpp
src/MacOSX/MacAranym.pbproj/: project.pbxproj
src/MacOSX/aranym_for_library/: config
src/MacOSX/pkg_support/: Aranym MacOSX.pmsp  readme.rtf
src/Unix/: .cvsignore  Makefile.in  ROM  ROM.bz2  acconfig.h  acinclude.m4  aratapif.c  autogen.sh  clipbrd.h  clipbrd_x11.cpp  config.h.in  configure  configure.ac  configure.in  ether_unix.cpp  getopt.c  getopt.h  getopt1.c  getopt_init.c  host_clock_unix.cpp  host_filesys_unix.cpp  main_unix.cpp  mingw_include.h  parameters_unix.cpp  sigsegv_common_x86.h  sysdeps.h  timer_unix.cpp  vasprintf.c  vm_alloc.cpp  vm_alloc.h  win32_supp.h  windows_ver.h
src/Unix/MacOSX/: .cvsignore  Info.plist  README.rtf  README_Xcode.rtf  README_ethernet.rtf  SDLMain.h  SDLMain.m  bpf_helper.c  ethernet_macosx.cpp  ethernet_macosx.h  fd_trans.c  fd_trans.h  parameters_MacOSX.cpp
src/Unix/araifc/: araifc.c  inet.c  net-support.h
src/Unix/beos/: aranym.rdef  cdrom_beos.cpp  clipbrd_beos.cpp  sigsegv_beos_x86.cpp
src/Unix/cygwin/: aranym.rc  clipbrd_cygwin.cpp  ethernet_cygwin.cpp  ethernet_cygwin.h  parameters_cygwin.cpp  sigsegv_cygwin.cpp  tools.cpp  tools_cygwin.cpp  win32_supp.cpp
src/Unix/darwin/: BUILDING_LEOPARD.txt  Info.plist  MachServer.c  MachUser.c  Makefile  README_ethernet.txt  SDLHotkeysRefresh.M  SDLHotkeysRefresh.mm  SDLMain.M  SDLMain.h  aranym2.icns  aratapif.sh  busybee.icns  busybee112-glossy.xcf  cdrom_osx.cc  cdrom_osx.cpp  clipbrd_darwin.M  ethernet_darwin.cpp  ethernet_darwin.h  host_filesys_darwin.M  parameters_darwin.M  parameters_darwin.cpp  sigsegv_darwin_x86.cpp
src/Unix/debian/: changelog  control  rules
src/Unix/irix/: unaligned.c
src/Unix/linux/: ethernet_linux.cpp  ethernet_linux.h  parameters_linux.cpp  sigsegv_linux.cpp  sigsegv_linux_arm.cpp  sigsegv_linux_x86.cpp  sigsegv_linux_x86_64.cpp
src/Unix/solaris/: sigsegv_solaris_x86.cpp
src/Unix/xbsd/: sigsegv_xbsd.cpp
src/disasm/: arm.h  disasm-arm-builtin.c  disasm-arm.cpp  disasm-arm.h  disasm-bfd.h  disasm-builtin.cpp  disasm-builtin.h  disasm-glue.cpp  disasm-x86-builtin.c  disasm-x86.cpp  disasm-x86.h  i386-opc.h  i386.h
src/gui-osx/: Info.plist  SDLMain.m  aranym.icns
src/gui-sdl/: .gitignore  aranym.fnt  aranym08.txt  aranym09.txt  aranym10.txt  dialog.cpp  dialog.h  dlgAbout.cpp  dlgAlert.cpp  dlgAlert.h  dlgDisk.cpp  dlgDisk.h  dlgFileSelect.cpp  dlgFileSelect.h  dlgHelp.cpp  dlgHostfs.cpp  dlgHostfs.h  dlgHotkeys.cpp  dlgHotkeys.h  dlgKeyboard.cpp  dlgKeyboard.h  dlgKeypress.cpp  dlgKeypress.h  dlgMain.cpp  dlgMain.h  dlgNetwork.cpp  dlgNetwork.h  dlgOs.cpp  dlgOs.h  dlgPartition.cpp  dlgPartition.h  dlgUsb.cpp  dlgUsb.h  dlgVideo.cpp  dlgVideo.h  file.cpp  file.h  fntconv.c  font.h  font8.h  (+7 more)
src/include/: SDL_compat.h  SDL_opengl_wrapper.h  acia.h  acsifdc.h  adler32.h  aradata.h  aramd5.h  aranym_exception.h  araobjs.h  aspi-win32.h  ata.h  audio.h  audio_conv.h  audio_crossbar.h  audio_dma.h  blitter.h  bootos.h  bootos_emutos.h  bootos_linux.h  bootos_netbsd.h  bootos_tos.h  cdrom.h  cfgopts.h  debug.h  dialog.h  dirty_rects.h  disasm-glue.h  dsp.h  dsp_core.h  dsp_cpu.h  dsp_disasm.h  dyngl.h  dyngl_gl.h  dyngl_glext.h  emu_bochs.h  emul_op.h  ether.h  ether_defs.h  exceptions.h  extfs.h  (+61 more)
src/include/linux/: libcwrap.h
src/natfeat/: atari_example.c  atari_example_gfa.lst  atari_rootsec.h  audio.cpp  audio.h  debugprintf.cpp  debugprintf.h  ethernet.cpp  ethernet.h  fvdidrv_nfapi.h  hostfs.cpp  hostfs.h  maptab.cpp  maptab.h  nf_audio.cpp  nf_audio.h  nf_base.cpp  nf_base.h  nf_basicset.cpp  nf_basicset.h  nf_config.cpp  nf_config.h  nf_hostexec.cpp  nf_hostexec.h  nf_name.cpp  nf_name.h  nf_objs.cpp  nf_objs.h  nf_scsidrv.cpp  nf_scsidrv.h  nf_stderr.cpp  nf_stderr.h  nf_version.h  nfaudio.cpp  nfaudio.h  nfbootstrap.cpp  nfbootstrap.h  nfcdrom.cpp  nfcdrom.h  nfcdrom_atari.h  (+34 more)
src/natfeat/doc/: attic.txt  call68k.txt  native.txt  nf.h  sample.c
src/natfeat/nfosmesa/: call-gen.pl  call-gl.c  call-glext.c  dispatch-gen.pl  dispatch-gl.c  dispatch-glext.c  dispatch-osmesa.c  load-gen.pl  load-gl.c  load-glext.c  paramcount-gl.c  pointers-gen.pl  pointers-gl.h  pointers-glext.h  pointers-osmesa.h  proto-gen.pl  proto-gl.h  proto-glext.h  unload-gen.pl  unload-gl.c  unload-glext.c
src/uae_cpu/: Makefile.am  aranym_glue.cpp  basilisk_glue.cpp  build68k.c  compiler.h  cpu_emulation.h  cpummu.cpp  cpummu.h  cpuopti.c  debug.cpp  fpp.cpp  fpu_x86.cpp  gencpu.c  m68k.h  memory-uae.h  memory.cpp  memory.h  newcpu.cpp  newcpu.h  readcpu.cpp  readcpu.h  registers.h  spcflags.h  table68k
src/uae_cpu/compiler/: codegen_arm.cpp  codegen_arm.h  codegen_x86.cpp  codegen_x86.h  compemu.h  compemu_fpp.cpp  compemu_midfunc_arm.cpp  compemu_midfunc_arm.h  compemu_midfunc_x86.cpp  compemu_midfunc_x86.h  compemu_support.cpp  flags_x86.h  gencomp.c  gencomp_arm.c  low_optimizer_x86.cpp  mid_optimizer.cpp  test_codegen_arm.c
src/uae_cpu/fpu/: core.h  flags.h  fpu.h  fpu_ieee.cpp  fpu_ieee.h  fpu_mpfr.cpp  fpu_uae.cpp  fpu_uae.h  fpu_x86.cpp  impl.h  (+6 more)
(+446 files in other folders)
